--- a/TrackMyShiftClient/TrackMyShiftClient.csproj
+++ b/TrackMyShiftClient/TrackMyShiftClient.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleTableExt" Version="3.1.9" />
+    <PackageReference Include="FuzzySharp" Version="2.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
+    <PackageReference Include="RestSharp" Version="108.0.1" />
+    <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
 </Project>
